--- a/styles.css
+++ b/styles.css
@@ -230,7 +230,7 @@ i{
 @media (min-width:280px ) and (max-width: 1280px){
     body{
         width: 100%;
-        height: auto;
+        height: 100vh;
         grid-template-columns: auto;
     }
     .inicio{
@@ -243,10 +243,11 @@ i{
         flex-direction: column;
     }
     .calendario{
-        width: 80%;
+        display: none;
     }
     .seleccion{
         width: 95%;
+        margin: 2%;
     }
     i{
         margin: 1%;
@@ -283,8 +284,8 @@ i{
         flex-wrap: wrap;
     }
     .imggaleria{
-        margin: 1% 0%;
-        width: 40%;
+        margin: 1% 1%;
+        width: 100%;
     }
     h2{
         font-size: 50px;
